--- a/DewDatabaseAbstracat/DewDatabaseAbstracat/DewDatabaseAbstracat.csproj
+++ b/DewDatabaseAbstracat/DewDatabaseAbstracat/DewDatabaseAbstracat.csproj
@@ -11,7 +11,10 @@
     <PackageTags>Database, MySQL, Postgresql, .net, .net standard, .net core</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageLicenseUrl>https://github.com/andreabbondanza/DewDatabaseAbstract/blob/master/LICENSE</PackageLicenseUrl>
-    <Version>1.0.2</Version>
+    <Version>1.1.0</Version>
+    <PackageReleaseNotes>Added properties attributes</PackageReleaseNotes>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
