--- a/DewDatabaseAbstracat/DewDatabaseAbstracat/DewDatabaseAbstracat.csproj
+++ b/DewDatabaseAbstracat/DewDatabaseAbstracat/DewDatabaseAbstracat.csproj
@@ -26,6 +26,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
   </ItemGroup>
 
